--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,14 @@ div input {
 
 } 
 
+
+div textarea{
+	display:block;
+	margin:auto;
+	padding-top: 10px;
+	border-radius:5px;
+}
+
 h1{
 	text-align:center;
 	text-decoration:none;
@@ -83,12 +91,32 @@ li a {
 	letter-spacing:5px;
 }
 
-textarea{
-	display:block;
-	margin:auto;
+td{
+	font-family:verdana, Geneva, Tahoma, sans-serif;
+	text-align:left;
+	height: 50px;
+    vertical-align: bottom;
+    border-bottom: 1px solid #ddd;
 }
 
+table {
+    width: 100%;
+}
 
+th {
+    height: 50px;
+    text-align:center;
+    border-bottom: 1px solid #ddd;
+    font-family:verdana, Geneva, Tahoma, sans-serif;
+}
 
+tr:hover {background-color: LightGrey;}
 
-
+img{
+	display:block;
+	margin:auto;
+	margin-top:20px;
+}
+#customers{
+	width:100%;
+}
